# AcousticsLib

./: CMakeLists.txt  LICENSE.txt  README.md
cmake/: FindAcousticsLib.cmake  FindOggVorbis.cmake
include/Ac/: AcLib.h  AudioFormats.h  AudioReader.h  AudioStream.h  AudioSystem.h  ChannelTypes.h  Export.h  Microphone.h  MusicalNotes.h  PackPush.h  PerlinNoise.h  Renderer.h  Sound.h  Sound3D.h  Synthesizer.h  Visualizer.h  WaveBuffer.h  WaveBufferFormat.h  WaveFormat.h  WaveFormatTags.h
sources/Core/: Endianness.h  PCMData.h  PackPop.h  PerlinNoise.cpp  Streaming.cpp  Streaming.h  WaveBuffer.cpp  WaveBuffer.h  WaveBufferFormat.cpp  WaveFormat.cpp  WaveFormat.h  WindowFunctions.h
sources/FileHandler/: AIFFFileFormat.h  AIFFReader.cpp  AIFFReader.h  AudioReader.h  AudioWriter.h  Endianness.h  FileType.cpp  FileType.h  FormatAuxiliary.cpp  FormatAuxiliary.h  MODFileFormat.h  MODStream.cpp  MODStream.h  OGGStream.cpp  OGGStream.h  WAVFileFormat.h  WAVFormatTags.h  WAVReader.cpp  WAVReader.h  WAVWriter.cpp  WAVWriter.h
sources/Platform/: Module.h
sources/Platform/Linux/: LinuxModule.cpp  LinuxModule.h
sources/Platform/MacOS/: MacOSModule.cpp  MacOSModule.h
sources/Platform/Win32/: Win32Microphone.cpp  Win32Microphone.h  Win32MicrophoneCallback.cpp  Win32MicrophoneCallback.h  Win32Module.cpp  Win32Module.h
sources/Reader/: OGGStream.h  WAVReader.h
sources/System/: AudioSystem.cpp  ModuleInterface.h  Sound.cpp  Synthesizer.cpp  Visualizer.cpp
sources/System/Null/: NullAudioSystem.cpp  NullAudioSystem.h  NullModuleInterface.cpp  NullSound.cpp  NullSound.h
sources/System/OpenAL/: ALAudioSystem.cpp  ALAudioSystem.h  ALBufferObj.cpp  ALBufferObj.h  ALBufferObjQueue.cpp  ALBufferObjQueue.h  ALFormat.cpp  ALFormat.h  ALModuleInterface.cpp  ALSound.cpp  ALSound.h  ALSound3D.cpp  ALSound3D.h  ALSourceObj.cpp  ALSourceObj.h  ALSourceObjManager.cpp  ALSourceObjManager.h  OpenAL.h
sources/System/XAudio2/: ComPtr.h  XA2AudioSystem.cpp  XA2AudioSystem.h  XA2ModuleInterface.cpp  XA2Sound.cpp  XA2Sound.h
test/: .gitignore  Test1.cpp  Test2.cpp  Test3_3D.cpp  Test4_Stream.cpp  Test5_Mic.cpp  Test6_Vis.cpp  TestUtil.h  test1.cpp  test2.cpp  test3.cpp  test3_3d.cpp  test4_stream.cpp
